--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="manifest" href="/manifest.json">
 
     <!-- iOS Meta Tags -->
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Tartu Bussid">
@@ -30,7 +31,10 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/service-worker.js')
+          // Construct path relative to current location
+          const basePath = window.location.pathname.replace(/\/[^\/]*$/, '/');
+          const swPath = basePath + 'service-worker.js';
+          navigator.serviceWorker.register(swPath)
             .then(reg => console.log('Service Worker registered:', reg.scope))
             .catch(err => console.log('Service Worker registration failed:', err));
         });
