fixed page counter https://hitscounter.dev/history?url=https://ekats.github.io/Tartubus

--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
       }
 
       // Simple page load counter (no signup, privacy-friendly)
+      // Uses hitscounter.dev - just counts page loads, no personal data
       window.addEventListener('load', () => {
-        fetch('https://api.countapi.xyz/hit/tartu-bussid/pageloads')
-          .catch(() => {}); // Silent fail if API is down
+        const img = new Image();
+        img.src = 'https://hitscounter.dev/api/hit?url=https://ekats.github.io/Tartubus&label=visits&color=0066cc';
+        img.style.display = 'none';
+        img.onerror = () => {}; // Silent fail if API is down
       });
     </script>
   </body>
